# openEnv

./: .env  .gitignore  Dockerfile  README.md  baseline.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  models.py  tasks.py
server/: app.py
