[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logisticsflow-openenv"
version = "0.1.0"
description = "A real-world OpenEnv simulation for testing AI agents on Supply Chain Management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests"
]